--- a/styles/navStyle.css
+++ b/styles/navStyle.css
@@ -124,7 +124,7 @@ button:hover {
   nav ul.active {
     left: 0;
     opacity: 1;
-    z-index: 999;
+    z-index: 2000;
   }
 
   nav ul li {
